--- a/assessment-mitsogo/public/index.html
+++ b/assessment-mitsogo/public/index.html
@@ -1,35 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width">
+  <link rel="dns-prefetch" href="https://static.hexnode.com">
+  <link rel="apple-touch-icon" href="https://static.hexnode.com/v2/assets/img/hexnode_icons/apple-touch-icon.png">
+  <title>The standard in Unified Endpoint Management | Hexnode UEM</title>
+  <meta name="description">
+  <meta name="keywords">
+  <meta property="og:url" content="https://www.hexnode.com/solutions/hexnode-uem">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="The standard in Unified Endpoint Management | Hexnode UEM">
+  <meta property="og:description">
+  <meta property="og:image" content="https://static.hexnode.com/img/open_graph/hexnode.jpg">
+ 
+  <link rel="icon" type="image/png" sizes="32x32"
+    href="https://static.hexnode.com/v2/assets/img/hexnode_icons/favicon.png">
+  <link rel="icon" type="image/png" sizes="16x16"
+    href="https://static.hexnode.com/v2/assets/img/hexnode_icons/favicon.png">
+  <link rel="icon" href="https://static.hexnode.com/v2/assets/img/hexnode_icons/favicon.png">
+ 
+ 
+</head>
+
+<body>
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+  <div id="root"></div>
+  <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
 
@@ -39,5 +37,6 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-  </body>
+</body>
+
 </html>
